# omnexa_ai_employee

./: README.md  pyproject.toml
docs/: SAP_PARITY_CHECKLIST.md  SYSTEM_AUDIT_PHASE1.md
omnexa_ai_employee/: aie_assessment.py  aie_gap_register.py  aie_global_benchmark.py  api.py  compatibility.json  hooks.py  install.py  license.txt  modules.txt  patches.txt  setup.py
omnexa_ai_employee/engine/: orchestrator.py  router.py
omnexa_ai_employee/engine/actions/: erp_tools.py
omnexa_ai_employee/engine/activities/: __init__.py  registry.py
omnexa_ai_employee/engine/audit/: __init__.py  ecosystem_audit.py
omnexa_ai_employee/engine/channels/: __init__.py  inbound.py  whatsapp.py
omnexa_ai_employee/engine/ocr/: service.py
omnexa_ai_employee/engine/providers/: __init__.py  base.py  ollama.py  ollama_setup.py  openai_client.py
omnexa_ai_employee/fixtures/: role.json
omnexa_ai_employee/omnexa_ai_employee/doctype/ai_agent/: ai_agent.json  ai_agent.py
omnexa_ai_employee/omnexa_ai_employee/doctype/ai_channel_account/: ai_channel_account.json  ai_channel_account.py
omnexa_ai_employee/patches/v1_0/: seed_activity_agents.py  seed_default_ai_agents.py  seed_ollama_provider.py  seed_whatsapp_channel.py  sync_ai_employee_workspace.py
omnexa_ai_employee/public/css/: omnexa_ai_employee.css
omnexa_ai_employee/public/js/: ai_employee_dashboard.js
omnexa_ai_employee/tests/: test_activities.py  test_ai_employee.py  test_wave_dod.py
omnexa_ai_employee/translations/: ar.csv  ar.po  en.po
omnexa_ai_employee/workspace/: ai_employee_workspace.py  omnexa_ai_employee.json
(+24 files in other folders)
